; ModuleID = '/home/carl/AnghaBench/linux/arch/arm64/kernel/vdso32/extr_vgettimeofday.c___vdso_clock_gettime.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm64/kernel/vdso32/extr_vgettimeofday.c___vdso_clock_gettime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.old_timespec32 = type { i32 }

@TASK_SIZE_32 = common dso_local global i64 0, align 8
@EFAULT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__vdso_clock_gettime(i32 %0, %struct.old_timespec32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.old_timespec32*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.old_timespec32* %1, %struct.old_timespec32** %5, align 8
  %6 = load %struct.old_timespec32*, %struct.old_timespec32** %5, align 8
  %7 = ptrtoint %struct.old_timespec32* %6 to i64
  %8 = load i64, i64* @TASK_SIZE_32, align 8
  %9 = icmp sge i64 %7, %8
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load i32, i32* @EFAULT, align 4
  %12 = sub nsw i32 0, %11
  store i32 %12, i32* %3, align 4
  br label %17

13:                                               ; preds = %2
  %14 = load i32, i32* %4, align 4
  %15 = load %struct.old_timespec32*, %struct.old_timespec32** %5, align 8
  %16 = call i32 @__cvdso_clock_gettime32(i32 %14, %struct.old_timespec32* %15)
  store i32 %16, i32* %3, align 4
  br label %17

17:                                               ; preds = %13, %10
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i32 @__cvdso_clock_gettime32(i32, %struct.old_timespec32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
